made some changes

--- a/test/sample.html
+++ b/test/sample.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga voluptatibus, reiciendis expedita beatae a dolore necessitatibus minima magni dignissimos unde, odio aperiam aliquid tenetur ipsa nemo assumenda eum dolorem quisquam.
+unde, odio aperiam aliquid tenetur ipsa nemo assumenda eum dolorem quisquam.
 </body>
 </html>
