made some changes

--- a/test/sample.html
+++ b/test/sample.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-unde, odio aperiam aliquid tenetur ipsa nemo assumenda eum dolorem quisquam.
+ aliquid tenetur ipsa nemo assumenda eum dolorem quisquam.
 </body>
 </html>
